test/libyul/yulSyntaxTests/for_expr_invalid_5.yul
{
	for {} mload {} {}
}
// ----
// ParserError 7104: (10-15='mload'): Builtin function "mload" must be called.
